# greed

./: .gitignore  Cargo.toml  README.md  rustfmt.toml
.zed/: debug.json
code/: Cargo.toml
code/benches/: benchmarks.rs  normal.rs  pmf.rs  solve.rs  terminal.rs
code/src/: greed.rs  lib.rs  main.rs  play.rs  pmf.rs  precompute.rs  solver.rs
code/src/dp/: dp.rs  mod.rs  pmf.rs
code/visualize/: optimal_policies.R
paper/: paper.typ
paper/assets/: references.yml
paper/template/: colors.typ  impl.typ  lib.typ
presentation/: Greed Presentation (2).tex  Greed Presentation (draft).aux  Greed Presentation (final).tex  Greed Presentation.tex  presentation.typ
report/: Greed Report (Final).aux  Greed Report (Final).fdb_latexmk  Greed Report (Final).fls  Greed Report (Final).tex  report.typ
src/: Probability_Tables_Visualization.Rmd  greed.rs  lib.rs  main.rs
src/results/: normal_states.csv  terminal_states.csv
visualize/: approximation.qmd  heatmaps.R
