[package]
name = "greed"
version = "0.1.0"
edition = "2021"

[dependencies]
num-bigint = "0.4.4"
num-rational = "0.4"
num-traits = "0.2.17"
serde = "1.0.193"
csv = "1.3.0"
memoize = "0.4.1"
clap = "4.5.36"
rayon = "1.10.0"
rustc-hash = "2.1.1"
rustfft = "6.3.0"

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "benchmarks"
harness = false
