[package]
name = "greed"
version = "0.1.0"
edition = "2021"

[dependencies]
csv = "1.3.0"
clap = "4.5.36"
colored = "3.0.0"
rayon = "1.10.0"
rustfft = "6.3.0"
rand = "0.9.1"

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "terminal"
harness = false

[[bench]]
name = "normal"
harness = false

[[bench]]
name = "solve"
harness = false

[[bench]]
name = "pmf"
harness = false
